--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <h3> <span> qualification : </span> Advanced Diploma in Software Engineering (ADSE) </h3>
         <h3> <span> post : </span> Web Developer </h3>
         <h3> <span> language : </span> English </h3>
-        <a href="#"><button class="btn"> download CV <i class="fas fa-download"></i> </button></a>
+        <a href="Muhammad's Resume.pdf"><button class="btn"> download CV <i class="fas fa-download"></i> </button></a>
     </div>
 
 
@@ -116,19 +116,20 @@
 
 <section class="portfolio" id="portfolio">
 
-<h1 class="heading"> my <span>portfolio</span> </h1>
+<h1 class="heading"> My <span>Projects</span> </h1>
 
 <div class="box-container">
 
     <div class="box">
-        <img src="images/img1.jpg" alt="">
+        <img src="images/14..jpeg" alt="">
     </div>
+    <a href="https://wajahatkhan1809c.github.io/project/" target="_blank"><button class="btn">Durable Furniture</button></a>
 
     <div class="box">
-        <img src="images/img2.jpg" alt="">
+        <img src="images/coming-soon.webp" alt="">
     </div>
 
-    <div class="box">
+    <!--<div class="box">
         <img src="images/img3.jpg" alt="">
     </div>
 
@@ -142,7 +143,7 @@
 
     <div class="box">
         <img src="images/img6.jpg" alt="">
-    </div>
+    </div> -->
 
 </div>
 
@@ -163,7 +164,7 @@
         <h3 class="title">contact info</h3>
 
         <div class="info">
-            <h3> <i class="fas fa-envelope"></i> wajahat1809c@aptechgdn.net </h3>
+            <h3> <i class="fas fa-envelope"></i> wajahat1809c@aptechgdn.net wajahatkhan9922@gmail.com </h3>
             <h3> <i class="fas fa-phone"></i> +92 3233049187 </h3>
             <h3> <i class="fas fa-map-marker-alt"></i> Karachi, Pakistan </h3>
         </div>
